@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2024-04-25T16:10:56Z",
+  "count" : 41,
+  "count_minmax" : [ 41, 41 ],
+  "count_decinc" : [ -0, +41 ],
+  "uniques" : 34,
+  "uniques_minmax" : [ 34, 34 ],
+  "uniques_decinc" : [ -0, +34 ]
+}
