@@ -1,12 +1,7 @@
 {
-  "count": 220,
-  "uniques": 140,
+  "count": 218,
+  "uniques": 142,
   "clones": [
-    {
-      "timestamp": "2024-04-11T00:00:00Z",
-      "count": 43,
-      "uniques": 32
-    },
     {
       "timestamp": "2024-04-12T00:00:00Z",
       "count": 39,
@@ -61,6 +56,11 @@
       "timestamp": "2024-04-24T00:00:00Z",
       "count": 27,
       "uniques": 19
+    },
+    {
+      "timestamp": "2024-04-25T00:00:00Z",
+      "count": 41,
+      "uniques": 34
     }
   ]
 }
